--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/modal-analise/modal-analise.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/modal-analise/modal-analise.component.html
@@ -31,7 +31,7 @@
       mat-raised-button
       color="primary"
       (click)="enviar()"
-      [disabled]="motivoIndeferimento.value === ''"
+      [disabled]="data.mostrarCampoMotivo && motivoIndeferimento.value === ''"
       routerLink="/listaSolicitacoesServidor"
     >
       Enviar
