atualizacao do historico

--- a/devII/src/app/modules/vagas-estagio/vagas/vagas.component.html
+++ b/devII/src/app/modules/vagas-estagio/vagas/vagas.component.html
@@ -12,6 +12,10 @@
     <span>{{ cardVagas.descricao }}</span>
   </div>
 
+  <div>
+    <span>...</span>
+  </div>
+
   <div class="buttonDetalhes">
     <button (click)="openDialog()">Detalhes</button>
   </div>
