--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
@@ -41,26 +41,26 @@
         </div>
         <div class="etapa">
           <span class="dados"><b>Etapa</b></span>
-          <span class="dados"><b>Email</b></span>
+          <span class="dados"><b>Responsável</b></span>
           <span class="dados"><b>Data</b></span>
         </div>
         <div class="etapa" *ngIf="studentData.historico[0]?.etapa == 2">
-          <span>Etapa 1:</span>
-          <span class="email">Solicitacao</span>
+          <span>Etapa 1: {{studentData.historico[0].status}}</span>
+          <span class="email">Aluno</span>
           <span class="data">{{ studentData.historico[0]?.data_solicitacao | date : "dd/MM/YYYY" }}</span>
         </div>
-        <div class="etapa" *ngIf="studentData.historico[1]?.etapa == 3">
-          <span>Etapa 2:</span>
+        <div class="etapa" *ngIf="studentData.historico[1]?.etapa == 3 ||  studentData.historico[1]?.etapa == 2">
+          <span>Etapa 2: {{studentData.historico[1].status}}</span>
           <span class="email">Setor Estagio</span>
           <span class="data">{{ studentData.historico[1]?.data_solicitacao | date : "dd/MM/YYYY" }}</span>
         </div>
-        <div class="etapa" *ngIf="studentData.historico[2]?.etapa == 4">
-          <span>Etapa 3:</span>
+        <div class="etapa" *ngIf="studentData.historico[2]?.etapa == 4 || studentData.historico[2]?.etapa == 3">
+          <span>Etapa 3: {{studentData.historico[2].status}}</span>
           <span class="email">Coordenador</span>
           <span class="data">{{ studentData.historico[2]?.data_solicitacao | date : "dd/MM/YYYY" }}</span>
         </div>
-        <div class="etapa" *ngIf="studentData.historico[3]?.etapa == 5">
-          <span>Etapa 4:</span>
+        <div class="etapa" *ngIf="studentData.historico[3]?.etapa == 5 || studentData.historico[3]?.etapa == 4">
+          <span>Etapa 4: {{studentData.historico[3].status}}</span>
           <span class="email">Diretor</span>
           <span class="data">{{ studentData.historico[3]?.data_solicitacao | date : "dd/MM/YYYY" }}</span>
         </div>
