--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.html
@@ -21,11 +21,11 @@
     <div class="step">
       <div class="circle" [ngClass]="progressoFluxo(2)">2</div>
       <div class="etapa">
-        <span class="emAndamento" *ngIf="solicitacao.historico[0].etapa == 2 && solicitacao.etapa == 2 && solicitacao.status.toLowerCase() !== 'indeferido'">*Em Análise*</span>
+        <span class="emAndamento" *ngIf="solicitacao.historico[0].etapa == 2 && solicitacao.etapa == 2 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
 
           <span class="etapaDeferido" *ngIf="solicitacao.historico[0].etapa == 2 && solicitacao.etapa > 2">*Deferido*</span>
 
-          <span class="etapaIndeferido" *ngIf="solicitacao.historico[0].etapa == 2 && solicitacao.etapa == 2 && solicitacao.status.toLowerCase() === 'indeferido'">*Indeferido*</span>
+          <span class="etapaIndeferido" *ngIf="solicitacao.historico[0].etapa == 2 && solicitacao.etapa == 2 && solicitacao.status === 'Indeferido'">*Indeferido*</span>
       </div>
       <span>Análise setor de estágio</span>
     </div>
@@ -33,11 +33,11 @@
     <div class="step">
       <div class="circle" [ngClass]="progressoFluxo(3)">3</div>
       <div class="etapa">
-        <span class="emAndamento" *ngIf="solicitacao.historico[1].etapa == 3 && solicitacao.etapa == 3 && solicitacao.status.toLowerCase() !== 'indeferido'">*Em Análise*</span>
+        <span class="emAndamento" *ngIf="solicitacao.historico[1].etapa == 3 && solicitacao.etapa == 3 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
 
           <span class="etapaDeferido" *ngIf="solicitacao.historico[1].etapa == 3 && solicitacao.etapa > 3">*Deferido*</span>
 
-          <span class="etapaIndeferido" *ngIf="solicitacao.historico[1].etapa == 3 && solicitacao.etapa == 3 && solicitacao.historico[1].status.toLowerCase() === 'indeferido'">*Indeferido*</span>
+          <span class="etapaIndeferido" *ngIf="solicitacao.historico[1].etapa == 3 && solicitacao.etapa == 3 && solicitacao.status === 'Indeferido'">*Indeferido*</span>
       </div>
       <span>Assinatura Coordenador de curso</span>
     </div>
@@ -46,11 +46,11 @@
     <div class="step">
       <div class="circle" [ngClass]="progressoFluxo(4)">4</div>
       <div class="etapa">
-        <span class="emAndamento" *ngIf="solicitacao.historico[2].etapa == 4 && solicitacao.etapa == 4 && solicitacao.status.toLowerCase() !== 'indeferido'">*Em Análise*</span>
+        <span class="emAndamento" *ngIf="solicitacao.historico[2].etapa == 4 && solicitacao.etapa == 4 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
 
         <span class="etapaDeferido" *ngIf="solicitacao.historico[2].etapa == 4 && solicitacao.etapa > 4">*Deferido*</span>
 
-        <span class="etapaIndeferido" *ngIf="solicitacao.historico[2].etapa == 4 && solicitacao.etapa == 4 && solicitacao.historico[2].status.toLowerCase() === 'indeferido'">*Indeferido*</span>
+        <span class="etapaIndeferido" *ngIf="solicitacao.historico[2].etapa == 4 && solicitacao.etapa == 4 && solicitacao.status === 'Indeferido'">*Indeferido*</span>
       </div>
       <span>Assinatura do Diretor</span>
     </div>
@@ -63,7 +63,7 @@
 
           <span class="etapaDeferido" *ngIf="solicitacao.historico[3].etapa == 5 && solicitacao.etapa == 5 && solicitacao.status == 'Deferido'">*Deferido*</span>
 
-          <span class="etapaIndeferido" *ngIf="solicitacao.historico[3].etapa == 5 && solicitacao.etapa == 5 && solicitacao.historico[3].status.toLowerCase() === 'indeferido'">*Indeferido*</span>
+          <span class="etapaIndeferido" *ngIf="solicitacao.historico[3].etapa == 5 && solicitacao.etapa == 5 && solicitacao.historico[3].status === 'Indeferido'">*Indeferido*</span>
       </div>
       <span>Processo de assinatura Finalizado</span>
     </div>
