Adicionado delete de docs por parte do aluno, limite de solicitação, login google, status da solicitação e listagem de servidores para deletar

--- a/devII/src/app/modules/aluno/solicitacoes-aluno/solicitacao/solicitacao.component.html
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/solicitacao/solicitacao.component.html
@@ -30,6 +30,9 @@
    </div>
 
    <div class="buttonContainer">
+    <div class="buttonDetalhes"  id="buttonDetalhes" >
+      <button (click)="abrirEdicao()" [ngClass]="statusEditavel"> Editar documentos</button>
+    </div>
     <div class="buttonDetalhes">
       <button (click)="openDialog()">Detalhes</button>
     </div>
