--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.scss
@@ -48,6 +48,12 @@
   background-color: #CB0606;
 }
 
+.statusColor4{
+  background-color: #00ff95;
+  font-size: 22px;
+  
+}
+
 .fluxo{
   display: flex;
   align-items: flex-start;
