--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.scss
@@ -94,3 +94,9 @@ button {
   background-color: #CB0606;
   font-size: 22px;
 }
+
+.statusColor4{
+  background-color: #00ff95;
+  font-size: 22px;
+  
+}
