--- a/devII/src/app/modules/servidor/formulario-servidor/formulario-servidor.component.html
+++ b/devII/src/app/modules/servidor/formulario-servidor/formulario-servidor.component.html
@@ -2,7 +2,11 @@
   <p>Cadastro</p>
 </div>
 
+<div class="listaServidores">
+<a routerLink="/listaServidores" class="listaservidor "><button class="botao ">Lista dos servidores</button></a>
+</div>
 <div class="formulario">
+  
   <form class="formulario--centro" (ngSubmit)="enviarFormulario()">
     <div class="formularioBox">
       <div class="divcargo">
