--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.scss
@@ -20,6 +20,11 @@
   margin-bottom: 16px;
 }
 
+.gerencia{
+  display: flex;
+  flex-direction: column;
+}
+
 .subtitulo {
   font-size: 18px;
   font-weight: bold;
