--- a/devII/src/app/modules/servidor/formulario-servidor/formulario-servidor.component.html
+++ b/devII/src/app/modules/servidor/formulario-servidor/formulario-servidor.component.html
@@ -54,7 +54,7 @@
         name="curso"
         id="curso"
         type="text"
-        [(ngModel)]="servidor.curso"
+        [(ngModel)]="servidor.curso.id"
         required
         [disabled]="habilitarCurso"
       >
