--- a/devII/src/app/core/components/header/header.component.scss
+++ b/devII/src/app/core/components/header/header.component.scss
@@ -50,6 +50,7 @@
         
         &:hover {
           cursor: pointer;
+          font-size: larger;
         }
       }
     }
@@ -98,3 +99,17 @@
     }
   }
 }
+
+.bemVindo{
+  line-height: 10px;
+          left: 86%;
+          width: 14%;       
+          display: flex;
+          position: absolute;
+          color: #ffffffbd;
+          justify-content:center;
+          font-size: calc(1.5em + 1px);
+          font-weight: bold;
+          font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+            sans-serif;
+        }
