--- a/devII/src/app/modules/login/login.component.scss
+++ b/devII/src/app/modules/login/login.component.scss
@@ -9,7 +9,7 @@
   form {
     width: 615px;
     margin: auto;
-    margin-top: 7%;
+    margin-top: 3%;
     margin-bottom: 7%;
     padding: 48px;
     border: 1px solid #ddd;
@@ -21,6 +21,15 @@
   label {
     display: block;
     margin-bottom: 10px;
+  }
+
+  h3{
+    text-align: center;
+    margin-bottom: 1%;
+    font-weight: normal;
+    font-family: 'Carlito';
+    font-size: 1.171875rem;
+
   }
 
   .campos{
@@ -40,12 +49,16 @@
   }
 
   .botaoGoogle{
-
     display: flex;
-    margin-top: 1%;
+    margin-top: 2%;
+    margin-bottom: 2%;
     justify-content: center;
     align-items: center;
+    height: 2em;
+
   }
+
+
 
   button[type="submit"] {
     display: block;
@@ -84,6 +97,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    justify-content: space-around;
   }
 
   .image-container {
