--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
@@ -28,14 +28,19 @@
       <span>Turno: {{ studentData.aluno.turno }}</span>
     </div>
     <div class="curso-aluno">
-      <span>Curso: <b>{{ studentData.aluno.curso.nomeCurso }}</b></span>
+      <span
+        >Curso: <b>{{ studentData.aluno.curso.nomeCurso }}</b></span
+      >
       <span>Semestre: </span>
     </div>
   </div>
 
   <div>
     <div>
-      <div class="corpo-dados-etapas" *ngIf="studentData$ | async as studentData">
+      <div
+        class="corpo-dados-etapas"
+        *ngIf="studentData$ | async as studentData"
+      >
         <div class="subtitulo">
           <span class="dados">Histórico de Etapas</span>
         </div>
@@ -44,84 +49,130 @@
           <span class="dados"><b>Responsável</b></span>
           <span class="dados"><b>Data</b></span>
         </div>
-        
+
         <div class="etapa" *ngIf="studentData.historico[0]?.etapa == 1">
-          <span>Etapa 1: {{studentData.historico[0].status}}</span>
+          <span>Etapa 1: {{ studentData.historico[0].status }}</span>
           <span class="email">Aluno</span>
-          <span class="data">{{ studentData.historico[0]?.data_solicitacao | date : "dd/MM/YYYY" }}</span>
+          <span class="data">{{
+            studentData.historico[0]?.data_solicitacao | date : "dd/MM/YYYY"
+          }}</span>
         </div>
-        <div class="etapa" *ngIf="studentData.historico[1]?.etapa == 3 ||  studentData.historico[1]?.etapa == 2">
-          <span>Etapa 2: {{studentData.historico[1].status}}</span>
+        <div
+          class="etapa"
+          *ngIf="
+            studentData.historico[1]?.etapa == 3 ||
+            studentData.historico[1]?.etapa == 2
+          "
+        >
+          <span>Etapa 2: {{ studentData.historico[1].status }}</span>
           <span class="email">Setor Estagio</span>
-          <span class="data">{{ studentData.historico[1]?.data_solicitacao | date : "dd/MM/YYYY" }}</span>
+          <span class="data">{{
+            studentData.historico[1]?.data_solicitacao | date : "dd/MM/YYYY"
+          }}</span>
         </div>
-        <div class="etapa" *ngIf="studentData.historico[2]?.etapa == 4 || studentData.historico[2]?.etapa == 3">
-          <span>Etapa 3: {{studentData.historico[2].status}}</span>
+        <div
+          class="etapa"
+          *ngIf="
+            studentData.historico[2]?.etapa == 4 ||
+            studentData.historico[2]?.etapa == 3
+          "
+        >
+          <span>Etapa 3: {{ studentData.historico[2].status }}</span>
           <span class="email">Coordenador</span>
-          <span class="data">{{ studentData.historico[2]?.data_solicitacao | date : "dd/MM/YYYY" }}</span>
+          <span class="data">{{
+            studentData.historico[2]?.data_solicitacao | date : "dd/MM/YYYY"
+          }}</span>
         </div>
-        <div class="etapa" *ngIf="studentData.historico[3]?.etapa == 5 || studentData.historico[3]?.etapa == 4">
-          <span>Etapa 4: {{studentData.historico[3].status}}</span>
+        <div
+          class="etapa"
+          *ngIf="
+            studentData.historico[3]?.etapa == 5 ||
+            studentData.historico[3]?.etapa == 4
+          "
+        >
+          <span>Etapa 4: {{ studentData.historico[3].status }}</span>
           <span class="email">Diretor</span>
-          <span class="data">{{ studentData.historico[3]?.data_solicitacao | date : "dd/MM/YYYY" }}</span>
+          <span class="data">{{
+            studentData.historico[3]?.data_solicitacao | date : "dd/MM/YYYY"
+          }}</span>
+        </div>
+      </div>
+    </div>
+    <div class="corpo-passos">
+      <mat-stepper #stepper>
+        <mat-step label="Download" state="phone">
+          <p class="titulo" *ngIf="documentList$ | async as docsData">
+            Download de Documentos
+          </p>
+          <div class="historico" *ngFor="let doc of documentList$ | async">
+            <p class="arquivo">{{ doc.nome }}</p>
+            <button mat-icon-button color="primary" (click)="download(doc)">
+              <mat-icon class="salvar">save_alt</mat-icon>
+            </button>
+          </div>
+          <div class="proximo" *ngIf="!disableButton">
+            <button [disabled]="disableButton" mat-button matStepperNext>
+              Proximo
+            </button>
+          </div>
+        </mat-step>
+        <mat-step label="Upload" state="chat" *ngIf="!disableButton">
+          <p class="titulo">Upload de Documentos</p>
+          <div class="arquivos-up">
+            <input
+              type="file"
+              id="avatar"
+              name="avatar"
+              multiple
+              #fileInput
+              [disabled]="disableButton"
+            />
+          </div>
+          <div class="proximo">
+            <button mat-button matStepperPrevious>Voltar</button>
+          </div>
+        </mat-step>
+      </mat-stepper>
+      <div class="botoes" *ngIf="studentData$ | async as studentData">
+        <button
+          class="deferir"
+          mat-raised-button
+          color="primary"
+          (click)="abrirDialogDeferir()"
+          [disabled]="disableButton"
+        >
+          > Deferir
+        </button>
+        <div class="gerencia">
+          <mat-form-field class="observacao">
+            <mat-label>Observação</mat-label>
+            <textarea
+              matInput
+              (blur)="atualizarObservacao()"
+              [(ngModel)]="observacao"
+              class="observacao"
+            ></textarea>
+          </mat-form-field>
+
+          <button mat-stroked-button color="warn" (click)="trocarEditar()" >
+            {{
+              studentData.editavel
+                ? "Abrir a edição de documentos para o aluno"
+                : "Fechar a edição de documentos para o aluno"
+            }}
+          </button>
         </div>
 
-    </div>
-  </div>
-  <div class="corpo-passos">
-    <mat-stepper #stepper>
-      <mat-step label="Download" state="phone">
-        <p class="titulo" *ngIf="documentList$ | async as docsData">
-          Download de Documentos
-        </p>
-        <div class="historico" *ngFor="let doc of documentList$ | async">
-          <p class="arquivo">{{ doc.nome }}</p>
-          <button mat-icon-button color="primary" (click)="download(doc)">
-            <mat-icon class="salvar">save_alt</mat-icon>
-          </button>
-        </div>
-        <div class="proximo" *ngIf="!disableButton">
-          <button [disabled]="disableButton" mat-button matStepperNext>
-            Proximo
-          </button>
-        </div>
-      </mat-step>
-      <mat-step label="Upload" state="chat" *ngIf="!disableButton">
-        <p class="titulo">Upload de Documentos</p>
-        <div class="arquivos-up">
-          <input
-            type="file"
-            id="avatar"
-            name="avatar"
-            multiple
-            #fileInput
-            [disabled]="disableButton"
-          />
-        </div>
-        <div class="proximo">
-          <button mat-button matStepperPrevious>Voltar</button>
-        </div>
-      </mat-step>
-    </mat-stepper>
-    <div class="botoes">
-      <button
-        class="deferir"
-        mat-raised-button
-        color="primary"
-        (click)="abrirDialogDeferir()"
-        [disabled]="disableButton"
-      >
-        > Deferir
-      </button>
-      <button
-        class="indeferir"
-        mat-raised-button
-        color="warn"
-        (click)="abrirDialogIndeferir()"
-        [disabled]="disableButton"
-      >
-        > Indeferir
-      </button>
+        <button
+          class="indeferir"
+          mat-raised-button
+          color="warn"
+          (click)="abrirDialogIndeferir()"
+          [disabled]="disableButton"
+        >
+          > Indeferir
+        </button>
+      </div>
     </div>
   </div>
 </div>
