--- a/devII/src/app/core/components/header/header.component.html
+++ b/devII/src/app/core/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar" *ngIf="logado">
+<nav class="navbar">
   <div class="navbar-inicio">
     <a routerLink="">
       <img src="/assets/img/logo-if-branco.png" />
