--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.html
@@ -25,8 +25,7 @@
     <div class="cardConteudo">
       <span>Curso: {{ solicitacao.aluno.curso.nomeCurso }}</span>
       <span>Data da solicitação: {{ solicitacao.dataSolicitacao | date:'dd/MM/yyyy' }}</span>
-
-    
+      <span>{{responsavelAtual}}</span>
     </div>
 
     <div class="buttonContainer">
