--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.scss
@@ -1,5 +1,5 @@
 .corpo {
-  padding: 16px;
+  padding: 14px;
   background-color: #f2f2f2;
 }
 
@@ -9,20 +9,27 @@
   justify-content: center;
   font-size: 24px;
   font-weight: bold;
-  margin-bottom: 16px;
+  margin-bottom: 14px;
 }
 
 .corpo-dados {
   font-size: 18px;
   background-color: #fff;
-  padding: 16px;
+  padding: 14px;
   border-radius: 8px;
-  margin-bottom: 16px;
+  margin-bottom: 14px;
+}
+
+.edicoes{
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
 }
 
 .gerencia{
   display: flex;
   flex-direction: column;
+  width: 40%;
 }
 
 .subtitulo {
@@ -40,9 +47,9 @@
 .corpo-dados-etapas {
   font-size: 18px;
   background-color: #fff;
-  padding: 16px;
+  padding: 14px;
   border-radius: 8px;
-  margin-bottom: 16px;
+  margin-bottom: 14px;
 }
 
 .etapa {
@@ -57,7 +64,7 @@
 }
 
 .etapa .email .data {
-  margin-left: 16px;
+  margin-left: 14px;
 }
 
 .infos-aluno {
@@ -75,7 +82,7 @@
 
 .corpo-setor-estagio {
   background-color: #fff;
-  padding: 16px;
+  padding: 14px;
   border-radius: 8px;
   margin-bottom: 16px;
 }
