Ajustes na  análise de documentos 2

--- a/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.scss
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.scss
@@ -96,6 +96,10 @@
   background-color: #6de78154;
 }
 
+.progressoEtapaIndeferido{
+  background-color: #CB0606;
+}
+
 .cardConteudo{
   margin: 10px 50px;
   font-size: 18px;
