--- a/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.html
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.html
@@ -21,13 +21,12 @@
     <div class="step">
       <div class="circle" [ngClass]="progressoFluxo(2)">2</div>
       <div class="etapa">
-        <span class="emAndamento" *ngIf="solicitacao.historico[0].etapa == 2 && solicitacao.etapa == 2 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
+        <span class="etapaIndeferido" *ngIf="solicitacao.status == 'Indeferido'">*Indeferido*</span>
+        <span class="etapaDeferido" *ngIf="solicitacao.historico[1].etapa == 2 && solicitacao.etapa > 2">*Deferido*</span>
 
-          <span class="etapaDeferido" *ngIf="solicitacao.historico[0].etapa == 2 && solicitacao.etapa > 2">*Deferido*</span>
-
-          <span class="etapaIndeferido" *ngIf="solicitacao.historico[0].etapa == 2 && solicitacao.etapa == 2 && solicitacao.status == 'Indeferido'">*Indeferido*</span>
       </div>
       <span>Análise setor de estágio</span>
+
     </div>
     <span class="retanguloFluxo"></span>
     <div class="step">
