--- a/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.scss
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.scss
@@ -138,10 +138,11 @@ button{
 }
 
 .observacao{
-  border: 1px solid;
   margin: 30px 50px;
-  font-size: 18px;
-  background-color: #cacaca78;
-  width: 55%;
+  font-size: 23px;
+  width: 90%;
   padding: 10px;
+  color: black;
 }
+
+
