--- a/devII/src/app/modules/servidor/formulario-servidor/formulario-servidor.component.html
+++ b/devII/src/app/modules/servidor/formulario-servidor/formulario-servidor.component.html
@@ -65,6 +65,9 @@
         <option value="13">Gestão Desportiva e de Lazer</option>
         <option value="14">Processos Gerenciais</option>
         <option value="15">Setor de Estágio</option>
+        <option value="17">Lazer</option>
+        <option value="18">Informática</option>
+        <option value="19">Eletrônica</option>
       </select>
 
       <div class="senhadiv">
