--- a/devII/src/app/core/components/header/header.component.html
+++ b/devII/src/app/core/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar " >
   <div class="navbar-inicio">
     <a routerLink="">
       <img src="/assets/img/logo-if-branco.png" />
@@ -13,9 +13,10 @@
 
   <div class="navbar-itens">
     <a class="navbar-itens-menu navbar-nav">
-      <a routerLink="/muralVagas" class="nav-item">Oportunidades </a>
+      <a href="https://mural.ifrs.edu.br/estagios" class="nav-item">Oportunidades </a>
       <a routerLink="/cadastroVagas" *ngIf="exibirLink">Cadastrar Vagas</a>
       <a routerLink="/cadastrarServidor" *permission="Roles.ROLE_SESTAGIO">Cadastrar servidor</a>
+      <a routerLink="/listaEstagiarios" *permission="Roles.ROLE_SESTAGIO">Lista estagiários</a>
       <a routerLink="/listaSolicitacoesServidor" *ngIf="exibirLink">Lista Solicitações</a>
       <a routerLink="/listaSolicitacoesAluno" *permission="Roles.ROLE_ALUNO">Solicitações</a>
       <a routerLink="/login" *ngIf="!isAuthenticated">Login</a>
