--- a/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.html
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.html
@@ -1,15 +1,23 @@
 <div class="espacamento">
   <div class="header">
     <div class="titulo">
-      <span>Solicitação de: {{ solicitacao.titulo }}</span>
+      <span>Solicitação de: {{ data.solicitacao.titulo }}</span>
       <span class="cardDecoracao"></span>
     </div>
 
     <div>
       <span>Status</span>
-      <span class="retanguloStatus" [ngClass]="statusSolicitacao()">{{ solicitacao.status }}</span>
+      <span class="retanguloStatus" [ngClass]="statusSolicitacao()">{{ data.solicitacao.status }}</span>
     </div>
   </div>
+
+
+  <div class="caixa">
+    <div class="observacao">
+      <p> <b *ngIf="data.observacaoOn">Observação adicionada: </b>{{observacao}}</p>
+    </div>
+  </div>
+
 
   <div class="fluxo">
     <div class="step">
@@ -21,8 +29,9 @@
     <div class="step">
       <div class="circle" [ngClass]="progressoFluxo(2)">2</div>
       <div class="etapa">
-        <span class="etapaIndeferido" *ngIf="solicitacao.status == 'Indeferido'">*Indeferido*</span>
-        <span class="etapaDeferido" *ngIf="solicitacao.historico[1].etapa == 2 && solicitacao.etapa > 2">*Deferido*</span>
+        <span class="emAndamento" *ngIf="data.solicitacao.historico[0].etapa == 1 && data.solicitacao.etapa == 2 && data.solicitacao.status !== 'Indeferido'">*Em Análise*</span>
+        <span class="etapaIndeferido" *ngIf="data.solicitacao.status == 'Indeferido'">*Indeferido*</span>
+        <span class="etapaDeferido" *ngIf="data.solicitacao.historico[0].etapa == 1 && data.solicitacao.etapa > 2">*Deferido*</span>
       </div>
       <span>Análise setor de estágio</span>
 
@@ -31,11 +40,10 @@
     <div class="step">
       <div class="circle" [ngClass]="progressoFluxo(3)">3</div>
       <div class="etapa">
-        <span class="emAndamento" *ngIf="solicitacao.historico[1].etapa == 3 && solicitacao.etapa == 3 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
+        <span class="emAndamento" *ngIf="data.solicitacao.historico[1].etapa == 2 && data.solicitacao.etapa == 3 && data.solicitacao.status !== 'Indeferido'">*Em Análise*</span>
 
-        <span class="etapaDeferido" *ngIf="solicitacao.historico[1].etapa == 3 && solicitacao.etapa > 3">*Deferido*</span>
-
-        <span class="etapaIndeferido" *ngIf="solicitacao.historico[1].etapa == 3 && solicitacao.etapa == 3 && solicitacao.historico[1].status == 'Indeferido'">*Indeferido*</span>
+        <span class="etapaDeferido" *ngIf="data.solicitacao.historico[1].etapa == 2 && data.solicitacao.etapa > 3">*Deferido*</span>
+        <span class="etapaIndeferido" *ngIf="data.solicitacao.historico[1].etapa == 2 && data.solicitacao.etapa == 3 && data.solicitacao.historico[1].status == 'Indeferido'">*Indeferido*</span>
       </div>
       <span>Assinatura Coordenador de curso</span>
     </div>
@@ -44,13 +52,13 @@
     <div class="step">
       <div class="circle" [ngClass]="progressoFluxo(4)">4</div>
       <div class="etapa">
-        <span class="emAndamento" *ngIf="solicitacao.historico[2].etapa == 4 && solicitacao.etapa == 4 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
+        <span class="emAndamento" *ngIf="data.solicitacao.historico[3].etapa == 4 && data.solicitacao.etapa == 4 && data.solicitacao.status !== 'Indeferido'">*Em Análise*</span>
 
-        <span class="etapaDeferido" *ngIf="solicitacao.historico[2].etapa == 4 && solicitacao.etapa > 4">*Deferido*</span>
+        <span class="etapaDeferido" *ngIf="data.solicitacao.historico[3].etapa == 4 && data.solicitacao.etapa > 4">*Deferido*</span>
 
-        <span class="etapaIndeferido" *ngIf="solicitacao.historico[2].etapa == 4 && solicitacao.etapa == 4 && solicitacao.historico[2].status == 'Indeferido'">*Indeferido*</span>
+        <span class="etapaIndeferido" *ngIf="data.solicitacao.historico[3].etapa == 4 && data.solicitacao.etapa == 4 && data.solicitacao.historico[2].status == 'Indeferido'">*Indeferido*</span>
       </div>
-      <span>Assinatura reitor</span>
+      <span>Assinatura Diretor</span>
     </div>
 
     <span class="retanguloFluxo"></span>
@@ -59,23 +67,19 @@
       <div class="etapa">
         <!-- <span class="emAndamento" *ngIf="solicitacao.historico[3].etapa == 5 && solicitacao.etapa == 5 && solicitacao.status !== 'Indeferido'">*Em Análise*</span> -->
 
-          <span class="etapaDeferido" *ngIf="solicitacao.historico[3].etapa == 5 && solicitacao.etapa == 5 && solicitacao.status == 'Deferido'">*Deferido*</span>
+          <span class="etapaDeferido" *ngIf="data.solicitacao.historico[4].etapa == 5 && data.solicitacao.etapa == 5 && data.solicitacao.status == 'Deferido'">*Deferido*</span>
 
-          <span class="etapaIndeferido" *ngIf="solicitacao.historico[3].etapa == 5 && solicitacao.etapa == 5 && solicitacao.historico[3].status == 'Indeferido'">*Indeferido*</span>
+          <span class="etapaIndeferido" *ngIf="data.solicitacao.historico[4].etapa == 5 && data.solicitacao.etapa == 5 && data.solicitacao.historico[3].status == 'Indeferido'">*Indeferido*</span>
       </div>
       <span>Processo de assinatura Finalizado</span>
     </div>
   </div>
 
   <div class="cardConteudo">
-    <span>{{ solicitacao.conteudo }}</span>
+    <span>{{ data.solicitacao.conteudo }}</span>
   </div>
 
-  <div *ngIf="solicitacao.observacao !== undefined && solicitacao.observacao !== null">
-    <div class="observacao" *ngIf="solicitacao.observacao.length > 0">
-      <p><b>Observação:</b> {{ solicitacao.observacao }}</p>
-    </div>
-  </div>
+
 
   <div class="buttonFechar">
     <button (click)="closeDialog()">Fechar</button>
