--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.scss
@@ -1,134 +1,148 @@
 .corpo {
-  padding: 14px;
-  background-color: #f2f2f2;
+  display: flex;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto auto auto;
+  gap: 20px;
+  flex-direction: column;
 }
 
 .corpo-titulo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 24px;
+  grid-column: span 3;
+  text-align: center;
+  font-size: 1.5em;
   font-weight: bold;
-  margin-bottom: 14px;
+  margin-bottom: 10px;
+  margin-left: 40%;
 }
 
-.corpo-dados {
-  font-size: 18px;
-  background-color: #fff;
-  padding: 14px;
-  border-radius: 8px;
-  margin-bottom: 14px;
+.titulosInfoDocumentos {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: calc(18% - 30px);
+  text-decoration: dotted;
 }
 
-.edicoes{
+.gap{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: calc(18% - 30px);
+}
+
+.checkDiretor {
+  width: 1.5em;
+  height: 1.5em;
+}
+
+.checkDiretor:checked {
+  background-color: #00ff11;
+  border-color: #3498db;
+}
+
+.assinado {
+  font-weight: 400;
+}
+
+.data {
+  font-size: 14px;
+  padding: 4px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: 200px;
+}
+
+.data:focus {
+  outline: none;
+  border-color: #007bff;
+}
+.corpo-dados-caixa {
   display: flex;
-  justify-content: space-evenly;
-  width: 100%;
+  font-family: "Roboto", "Open Sans", "Lato", sans-serif;
+  font-size: medium;
 }
 
-.gerencia{
-  display: flex;
-  flex-direction: column;
-  width: 40%;
+.corpo-dados,
+.corpo-dados-etapas,
+.corpo-passos {
+  background-color: #f8f9fa;
+  border: 1px solid #dee2e6;
+  border-radius: 5px;
+  padding: 20px;
+
+}
+
+.curso {
+  color: #007bff;
 }
 
 .subtitulo {
-  font-size: 18px;
+  font-size: 1.2em;
   font-weight: bold;
-  margin-bottom: 8px;
+  margin-bottom: 10px;
 }
 
-.nome-aluno {
+.etapa,
+.historico,
+.arquivos-up,
+.botoes {
+  display: grid;
+  font-size: medium;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  font-family: "Roboto", "Open Sans", "Lato", sans-serif;
+  gap: 10px;
+}
+
+.nome-aluno,
+.infos-aluno,
+.curso-aluno{
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 8px;
-}
-
-.corpo-dados-etapas {
-  font-size: 18px;
-  background-color: #fff;
-  padding: 14px;
-  border-radius: 8px;
-  margin-bottom: 14px;
-}
-
-.etapa {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 8px;
-}
-
-.etapa span {
-  flex: 1;
-}
-
-.etapa .email .data {
-  margin-left: 14px;
-}
-
-.infos-aluno {
-  display: flex;
-  width: auto;
-  text-align: right;
-  justify-content: space-between;
-  margin-bottom: 8px;
-}
-
-.curso-aluno {
-  display: flex;
-  justify-content: space-between;
-}
-
-.corpo-setor-estagio {
-  background-color: #fff;
-  padding: 14px;
-  border-radius: 8px;
-  margin-bottom: 16px;
-}
-
-.download {
-  margin-bottom: 16px;
-}
-
-.historico {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 8px;
-}
-
-.arquivo {
-  font-weight: bold;
+  flex-direction: column;
 }
 
 .botoes {
-  margin-top: 20px;
-  width: 100%;
-  height: 100%;
   display: flex;
-  align-items: flex-end;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
-.proximo {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 16px;
-}
-
-.corpo-passos {
-  background-color: #fff;
-  padding: 16px;
-  border-radius: 8px;
-}
-
-.titulo {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 16px;
+.etapa,
+.historico,
+.arquivos-up {
+  grid-column: span 3;
 }
 
 .arquivos-up {
-  margin-bottom: 16px;
+  text-align: center;
+}
+
+.arquivo {
+  font-size: 1.1em;
+}
+
+.arquivo {
+  font-size: 1.3em;
+  color: red;
+}
+
+.proximo,
+.deferir,
+.indeferir {
+  grid-column: span 3;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.gerencia {
+  grid-column: span 3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.edicoes {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+}
+
+.observacao {
+  width: 100%;
 }
